--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -4,8 +4,8 @@
 <div class="wrapper">
   @@include('partials/header.html')
   
+  @@include('components/hero.html')
 
-  <div class="empty" style="margin: 250px 0 0 0; padding: 50px; background: rgb(105, 105, 169); height: 300px;">empty block</div>
+  @@include('partials/footer.html')
 </div>
 
-@@include('partials/footer.html')
