update header script

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -5,6 +5,8 @@
   @@include('partials/header.html')
   
   @@include('components/hero.html')
+  
+  @@include('components/cta.html')
 
   @@include('partials/footer.html')
 </div>
