--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -12,6 +12,8 @@
 
   @@include('components/companies.html')
 
+  @@include('components/cards.html')
+
   @@include('partials/footer.html')
 </div>
 
