--- a/src/html/pages/furnizori-terti.html
+++ b/src/html/pages/furnizori-terti.html
@@ -2,7 +2,7 @@
 
 
 <div class="wrapper">
-    @@include('partials/header.html')
+    @@include('partials/header-tech.html')
 
     <div class="tech">
         <div class="tech__container">
@@ -136,5 +136,5 @@
         </div>
     </div>
 
-    @@include('partials/footer.html')
+    @@include('partials/footer-tech.html')
 </div>
